src/pages/TopNavbar.scss
@use '../theme/colors.scss';

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 3vh;
  background-color: colors.$cards-background;

  label {
    color: colors.$texts;
  }

  input {
    padding: 0.5rem;
    border-radius: 10px;
    background-color: colors.$cards-background;
    outline: none;
    color: colors.$texts;
  }
}

.links {
  * {
    margin: 0.5rem;
    margin-left: 1rem;
    text-decoration: none;
    color: colors.$texts;
  }
}

@media screen and (max-width: 634px) {
  .links {
    * {
      display: block;
      margin-bottom: 1rem;
      text-decoration: none;
      white-space: nowrap;
      color: colors.$texts;
    }
  }
}

